test/Conversions/llzk_to_zklean_no_eligible_fail.llzk
// RUN: llzk-opt --convert-llzk-to-zklean -verify-diagnostics %s

// expected-error@+1 {{failed to produce ZKLean module}}
module attributes {llzk.lang = "llzk"} {
  function.def @helper() {
    function.return
  }
}
